--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
     ports:
       - "25:25"
     environment:
+      - SERVER_HOSTNAME=mail.${SERVER_IP:-10.78.14.61}.${DOMAIN_SUFFIX:-nip.io}
       - SMTP_SERVER=${SMTP_SERVER:-smtp.nvidia.com}
       - SMTP_PORT=${SMTP_PORT:-25}
       - SMTP_NETWORKS=${SMTP_NETWORKS:-10.0.0.0/8,172.16.0.0/12,192.168.0.0/16}
